# axum-postgres-boilerplate

./: .env.sample  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: app.rs  doc.rs  lib.rs  main.rs  query_root.rs
src/common/: api_error.rs  cfg.rs  middleware.rs  mod.rs
src/common/utils/: mod.rs
src/database/: mod.rs
src/database/migrations/: m20240126114845_create_users_table.rs  mod.rs
src/modules/: mod.rs  sea_orm_active_enums.rs
src/modules/auth/: controller.rs  mod.rs  service.rs
src/modules/auth/dto/: mod.rs
src/modules/auth/guards/: admin_guard.rs  auth_guard.rs  graphql_guards.rs  mod.rs
src/modules/health/: controller.rs  mod.rs  service.rs
src/modules/health/dto/: mod.rs
src/modules/users/: controller.rs  mod.rs  service.rs
src/modules/users/dto/: mod.rs
src/modules/users/entities/: mod.rs
src/modules/users/enums/: mod.rs  user_role.rs  user_status.rs
