[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
axum = "0.8.4"
axum-extra = "0.10.1"
hyper = "1.4.1"
tower = { version = "0.5.0", features = [] }
tower-http = { version = "0.6.6", features = [
    "trace",
    "timeout",
    "request-id",
    "cors",
    "normalize-path",
] }

sea-orm = { version = "1.1.12", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "macros",
    "with-chrono",
    "with-json",
    "with-uuid",
] }

sea-orm-migration = { version = "1.1.12", features = ["runtime-tokio-rustls"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }

reqwest = { version = "0.12.7", default-features = false, features = [
    "json",
    "rustls-tls",
] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.8.0", features = ["v7", "serde"] }
dotenvy = "0.15.7"

anyhow = "1.0.98"
thiserror = "2.0.12"
utoipa = "5.3.1"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-axum = "0.2.0"
utoipauto = "0.2.0"
seaography = { version = "~1.1.4", features = ["with-decimal", "with-chrono", "with-postgres-array", "with-uuid"] }
async-graphql-axum = "7.0.17"
async-graphql = "7.0.17"
jsonwebtoken = "9.3.1"
base64 = "0.22.1"
bcrypt = "0.15.0"
